# FGE

./: CMakeLists.txt
include/: .animation.h.swp  animation.h  combo.h  event.h  keyboard.h  renderable.h  rendermanager.h  sprite.h
src/: animation.cpp  combo.cpp  event.cpp  keyboard.cpp  main.cpp  rendermanager.cpp  sprite.cpp
